# Hackathon-Insightly-AI

./: README.md
Frontend/: index.html  package-lock.json  tailwind.config.js
Frontend/src/: ChatInterface.tsx  index.css
Frontend/src/components/charts/: ChartContainer.tsx
Frontend/src/components/chat/: Message.tsx  MessageInput.tsx
Frontend/src/components/file-upload/: DragDropArea.tsx  FileUpload.tsx
Frontend/src/components/sidebar/: SuggestedQuestions.tsx
Frontend/src/services/: storage.ts
Frontend/src/types/: index.ts
backend/: .replit  main.py  pyproject.toml
frontend-app/: package.json
frontend-app/src/: App.tsx  FileUpload.tsx
frontend-app/src/components/chat/: ChatInterface.tsx
frontend-app/src/components/file-upload/: UploadProgress.tsx
frontend-app/src/components/layout/: Header.tsx
frontend-app/src/components/sidebar/: DocumentList.tsx
frontend-app/src/hooks/: useFileUpload.ts  useTheme.ts
frontend-app/src/services/: api.ts
