[project]
name = "finsight-backend"
version = "0.1.0"
description = "Backend for FinSight AI"
authors = ["Rachana <rachanavenkumahanti1999@gmail.com>"]
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn",
  "python-multipart",
  "openai",
  "pypdf",
  "aiofiles",
  "pydantic>=2.11.3",
  "cohere>=5.15.0",
]
